--- a/src/gestorproyectos/vista/FXMLInicioSesion.fxml
+++ b/src/gestorproyectos/vista/FXMLInicioSesion.fxml
@@ -4,14 +4,44 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="gestorproyectos.controller.FXMLInicioSesionController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorproyectos.controller.FXMLInicioSesionController">
    <children>
-      <PasswordField layoutX="226.0" layoutY="254.0" promptText="Contraeña" />
-      <TextField layoutX="226.0" layoutY="200.0" promptText="Correo" />
-      <Button layoutX="275.0" layoutY="307.0" mnemonicParsing="false" text="Aceptar" />
-      <Label layoutX="258.0" layoutY="101.0" text="INICIAR SESIÓN" />
+      <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../recursos/FondoGestorProyectos.jpg" />
+         </image>
+      </ImageView>
+      <PasswordField fx:id="txtFContrasenia" layoutX="187.0" layoutY="251.0" prefHeight="26.0" prefWidth="226.0" promptText="Contraeña" />
+      <TextField fx:id="txtFCorreo" layoutX="187.0" layoutY="191.0" prefHeight="26.0" prefWidth="226.0" promptText="Correo" />
+      <Button layoutX="275.0" layoutY="307.0" mnemonicParsing="false" onAction="#clickAceptar" text="Aceptar" />
+      <Label layoutX="180.0" layoutY="138.0" text="Por favor, ingresa tus datos para iniciar sesión" textFill="WHITE">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font></Label>
+      <Label layoutX="187.0" layoutY="168.0" text="Correo:" textFill="WHITE">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="187.0" layoutY="228.0" text="Contraseña:" textFill="WHITE">
+         <font>
+            <Font name="SansSerif Regular" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="242.0" layoutY="94.0" text="Bienvenido(a)" textFill="WHITE">
+         <font>
+            <Font name="SansSerif Regular" size="20.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="52.0" fitWidth="58.0" layoutX="528.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../recursos/logo%20uv%20blanco.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
