--- a/src/gestorproyectos/vista/FXMLRegistroProyecto.fxml
+++ b/src/gestorproyectos/vista/FXMLRegistroProyecto.fxml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,12 +25,29 @@
             <Image url="@../recursos/logo%20uv%20blanco.png" />
          </image>
       </ImageView>
-      <Label layoutX="226.0" layoutY="53.0" text="Tipo Proyecto:" textFill="WHITE">
+      <Label layoutX="226.0" layoutY="96.0" text="Tipo Proyecto:" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <RadioButton layoutX="388.0" layoutY="54.0" mnemonicParsing="false" text="Pŕactica Profesional" textFill="WHITE" />
-      <RadioButton layoutX="578.0" layoutY="54.0" mnemonicParsing="false" text="Servicio Social" textFill="WHITE" />
+      <RadioButton fx:id="rbPractica" layoutX="388.0" layoutY="97.0" mnemonicParsing="false" text="Pŕactica Profesional" textFill="WHITE" />
+      <RadioButton fx:id="rbServicio" layoutX="578.0" layoutY="97.0" mnemonicParsing="false" text="Servicio Social" textFill="WHITE" />
+      <Label layoutX="85.0" layoutY="167.0" text="Nombre Proyecto:" textFill="WHITE" />
+      <Label layoutX="586.0" layoutY="167.0" text="Fecha de inicio:" textFill="WHITE" />
+      <Label layoutX="86.0" layoutY="228.0" text="Periodo:" textFill="WHITE" />
+      <Label layoutX="274.0" layoutY="228.0" text="Cupo:" textFill="WHITE" />
+      <Label layoutX="85.0" layoutY="290.0" text="Objetivo:" textFill="WHITE" />
+      <Label layoutX="469.0" layoutY="290.0" text="Descripción:" textFill="WHITE" />
+      <Label layoutX="466.0" layoutY="228.0" text="Responsable:" textFill="WHITE" />
+      <Label layoutX="655.0" layoutY="228.0" text="Empresa:" textFill="WHITE" />
+      <TextField fx:id="txtFNombreProyecto" layoutX="82.0" layoutY="185.0" prefHeight="26.0" prefWidth="457.0" promptText="Nombre" />
+      <DatePicker fx:id="dpFechaInicio" layoutX="581.0" layoutY="185.0" prefHeight="26.0" prefWidth="222.0" promptText="Fecha" />
+      <TextField fx:id="txtFPeriodo" layoutX="86.0" layoutY="246.0" promptText="MesAAAA-MesAAAA" />
+      <TextField fx:id="txtFCupo" layoutX="274.0" layoutY="246.0" promptText="Cupo" />
+      <TextField fx:id="txtFEmpresa" layoutX="653.0" layoutY="246.0" promptText="Empresa" />
+      <ComboBox fx:id="cBoxResponsable" layoutX="464.0" layoutY="246.0" prefWidth="150.0" promptText="Responsable" />
+      <TextArea fx:id="txtAObjetivo" layoutX="82.0" layoutY="308.0" prefHeight="104.0" prefWidth="343.0" />
+      <TextArea fx:id="txtADescripcion" layoutX="464.0" layoutY="308.0" prefHeight="104.0" prefWidth="343.0" />
+      <Button layoutX="739.0" layoutY="442.0" mnemonicParsing="false" onAction="#clickRegistrar" text="Registrar" />
    </children>
 </AnchorPane>
